[package]
name = "benchmark_client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
futures = "0.3.24"
hotshot-centralized-server = { path = "..", features = ["async-std-executor"] }
hotshot-utils = { path = "../../utils", features = ["async-std-executor"] }
hotshot-types = { path = "../../types", features = ["async-std-executor"] }
tracing = "0.1.36"
