[package]
name = "hotshot-builder-api"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
clap.workspace = true
derive_more = "0.99"
futures = "0.3"
hotshot-types = { path = "../types" }
serde = { workspace = true }
snafu = { workspace = true }
tagged-base64 = { workspace = true }
tide-disco = { workspace = true }
toml = { workspace = true }
committable = { workspace = true }
vbs = { workspace = true }
