[package]
name = "hotshot-example-types"
version = { workspace = true }
edition = { workspace = true }
description = "Types and traits for the HotShot consesus module"
authors = { workspace = true }

[features]
default = []
# NOTE this is used to activate the slow tests we don't wish to run in CI
slow-tests = []
gpu-vid = ["hotshot-task-impls/gpu-vid"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
sha3 = "^0.10"
committable = { workspace = true }
hotshot = { path = "../hotshot" }
hotshot-types = { path = "../types" }
hotshot-task-impls = { path = "../task-impls", version = "0.5.36", default-features = false }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
async-lock = { workspace = true }
jf-vid = { workspace = true }
vbs = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
