[package]
name = "hotshot-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
hotshot = { path = "../hotshot" }
hotshot-types = { path = "../types" }
hotshot-example-types.path = "../example-types"
url.workspace = true
libp2p.workspace = true
portpicker.workspace = true
libp2p-networking.workspace = true
anyhow.workspace = true
rand.workspace = true
futures.workspace = true
tracing.workspace = true
hotshot-testing.path = "../testing"
lru.workspace = true
cdn-broker.workspace = true
cdn-marshal.workspace = true
sha2.workspace = true
warp = { version = "0.3", default-features = false }
reqwest.workspace = true
bytes = "1"
parking_lot.workspace = true
[[example]]
name = "all"
path = "all.rs"

[[example]]
name = "cdn-broker"
path = "cdn/broker.rs"

[[example]]
name = "cdn-marshal"
path = "cdn/marshal.rs"

[[example]]
name = "coordinator"
path = "coordinator.rs"

# [[example]]
# name = "single-validator"
# path = "single-validator.rs"

[lints]
workspace = true
