[package]
name = "hotshot-fakeapi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
toml = { workspace = true }
tide-disco = { workspace = true }
anyhow = { workspace = true }
hotshot-types = { path = "../types" }
vbs = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
hotshot-example-types = { path = "../example-types" }
async-trait = { workspace = true }
futures = { workspace = true }
async-lock = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
