[package]
name = "hotshot-fakeapi"
documentation = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hotshot-example-types = { path = "../example-types" }
hotshot-types = { path = "../types" }
rand = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
vbs = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
