[package]
name = "hotshot-qc"
description = "Quorum certificate instantiations"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = { workspace = true }
ark-bn254 = "0.4.0"
ark-ec = { workspace = true }
ark-ff = "0.4.0"
ark-pallas = "0.4.0"
ark-poly = "0.4.0"
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
ethereum-types = { workspace = true }
generic-array = { workspace = true }
hotshot-types = { path = "../types" }
jf-primitives = { workspace = true }
jf-relation = { workspace = true }
jf-utils = { workspace = true }
serde = { workspace = true }
typenum = { workspace = true }

[dev-dependencies]
hotshot-stake-table = { path = "../hotshot-stake-table" }

[features]
default = ["parallel"]
std = ["ark-std/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel"]
