[package]
name = "hotshot-qc"
description = "Quorum certificate instantiations"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = "0.4"
ark-bn254 = "0.4"
ark-ec = { workspace = true }
ark-ff = "0.4"
ark-std = { workspace = true }
bitvec = { workspace = true }
ethereum-types = { workspace = true }
generic-array = { workspace = true }
hotshot-types = { workspace = true }
jf-primitives = { workspace = true }
jf-relation = { workspace = true }
jf-utils = { workspace = true }
serde = { workspace = true }
typenum = { workspace = true }

[dev-dependencies]
hotshot-stake-table = { path = "../hotshot-stake-table" }

[features]
default = ["parallel"]
std = ["ark-std/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel"]

[lints]
workspace = true
