[package]
name = "hotshot-stake-table"
description = "Stake table implementations for HotShot"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bitvec = { version = "1.0.1", default-features = false, features = [
    "alloc",
    "atomic",
    "serde",
] }
digest = { workspace = true }
displaydoc = { version = "0.2.3", default-features = false }
ethereum-types = { workspace = true }
generic-array = "0.14.7"
hotshot-types = { path = "../../types" }
jf-primitives = { workspace = true }
jf-relation = { git = "https://github.com/espressosystems/jellyfish", branch = "hotshot-compat" }
jf-utils = { git = "https://github.com/espressosystems/jellyfish", branch = "hotshot-compat" }
serde = { workspace = true, features = ["rc"] }
tagged-base64 = { git = "https://github.com/espressosystems/tagged-base64", tag = "0.3.0" }
typenum = { version = "1.16.0" }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel", "ark-ff/parallel"]
