[package]
name = "hotshot-stake-table"
description = "Stake table implementations for HotShot"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = { workspace = true }
ark-std = { workspace = true }
digest = { workspace = true }
ethereum-types = { workspace = true }
hotshot-types = { path = "../types" }
jf-primitives = { workspace = true }
jf-utils = { workspace = true }
serde = { workspace = true, features = ["rc"] }
tagged-base64 = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel", "ark-ff/parallel"]

[lints]
workspace = true
