[package]
name = "hotshot-stake-table"
description = "Stake table implementations for HotShot"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = { workspace = true }
ark-std = { workspace = true }
digest = { workspace = true }
hotshot-types = { path = "../types" }
jf-crhf = { workspace = true }
jf-rescue = { workspace = true }
jf-signature = { workspace = true, features = ["bls", "schnorr"] }
jf-utils = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true, features = ["rc"] }
tagged-base64 = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std"]
parallel = ["jf-utils/parallel", "ark-ff/parallel"]

[lints]
workspace = true
