[package]
authors = { workspace = true }
description = "HotShot consesus module"
edition = { workspace = true }
name = "hotshot"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["docs", "doc-images"]
example-upgrade = ["hotshot-task-impls/example-upgrade"]
gpu-vid = ["hotshot-task-impls/gpu-vid"]
rewind = ["hotshot-task-impls/rewind"]

# Features required for binaries
bin-orchestrator = ["clap"]

# Build the extended documentation
docs = []
doc-images = []
hotshot-testing = []

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-compatibility-layer = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bimap = "0.6"
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
committable = { workspace = true }
custom_debug = { workspace = true }
dashmap = "6"
derive_more = { workspace = true }
either = { workspace = true }
ethereum-types = { workspace = true }
futures = { workspace = true }
hotshot-task = { path = "../task" }
hotshot-task-impls = { path = "../task-impls", version = "0.5.36", default-features = false }
hotshot-types = { path = "../types" }
libp2p-identity = { workspace = true }
libp2p-networking = { workspace = true }
lru.workspace = true
portpicker = "0.1"
rand = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
surf-disco = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
vbs = { workspace = true }
jf-signature.workspace = true
blake3.workspace = true
sha2 = { workspace = true }
url = { workspace = true }
num_enum = "0.7"
parking_lot = "0.12"

[target.'cfg(all(async_executor_impl = "tokio"))'.dependencies]
tokio = { workspace = true }
cdn-client = { workspace = true }
cdn-broker = { workspace = true, features = ["global-permits"] }
cdn-marshal = { workspace = true }

[target.'cfg(all(async_executor_impl = "async-std"))'.dependencies]
async-std = { workspace = true }
cdn-client = { workspace = true, features = ["runtime-async-std"] }
cdn-broker = { workspace = true, features = [
  "runtime-async-std",
  "global-permits",
] }
cdn-marshal = { workspace = true, features = [
  "runtime-async-std",
  "global-permits",
] }


[dev-dependencies]
blake3 = { workspace = true }
clap.workspace = true
toml = { workspace = true }

[lints]
workspace = true
