[package]
authors = { workspace = true }
description = "HotShot consesus module"
edition = { workspace = true }
name = "hotshot"
readme = "README.md"
version = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["docs", "doc-images"]
example-upgrade = ["hotshot-task-impls/example-upgrade"]
rewind = ["hotshot-task-impls/rewind"]

# Build the extended documentation
docs = []
doc-images = []
hotshot-testing = []

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bimap = "0.6"
bincode = { workspace = true }
blake3 = { workspace = true }
cdn-broker = { workspace = true, features = ["global-permits"] }
cdn-client = { workspace = true }
cdn-marshal = { workspace = true }
chrono = { workspace = true }
committable = { workspace = true }
dashmap = "6"
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hotshot-task = { path = "../task" }
hotshot-task-impls = { path = "../task-impls", version = "0.5.36", default-features = false }
hotshot-types = { path = "../types" }
libp2p-identity = { workspace = true }
libp2p-networking = { workspace = true }
lru = { workspace = true }
num_enum = "0.7"
parking_lot = "0.12"
portpicker = "0.1"
primitive-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["rc"] }
sha2 = { workspace = true }
time = { workspace = true }
gcr = "0.1"

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utils = { path = "../utils" }
vbs = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
blake3 = { workspace = true }

[lints]
workspace = true
