[package]
description = "Libp2p Networking Layer"
name = "libp2p-networking"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["webui"]
webui = []

[dev-dependencies]
hotshot-example-types = { path = "../example-types" }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
custom_debug = { workspace = true }
delegate = "0.13"
derive_builder = "0.20"
futures = { workspace = true }
hotshot-types = { path = "../types" }
libp2p-swarm-derive = { workspace = true }
libp2p-identity = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
pin-project = "1"
cbor4ii = "0.3"
libp2p = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }

[lints]
workspace = true
