[package]
description = "Libp2p Networking Layer"
name = "libp2p-networking"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["webui"]
webui = []

[dev-dependencies]
hotshot-example-types = { path = "../example-types" }

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
cbor4ii = { workspace = true }
delegate = "0.13"
derive_builder.workspace = true
derive_more = { workspace = true }
futures = { workspace = true }
hotshot-types = { path = "../types" }
lazy_static = { workspace = true }
libp2p = { workspace = true, features = ["tokio"] }
libp2p-identity = { workspace = true }
libp2p-swarm-derive = { workspace = true }
pin-project = "1"
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
