[package]
name = "hotshot-macros"
version = { workspace = true }
edition = { workspace = true }
description = "Macros for hotshot tests"

[dependencies]
derive_builder = "0.20"
proc-macro2 = "1"
# proc macro stuff
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
[lints]
workspace = true
